--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilo.css">
     <title>Proyecto Final - 1er Pre Entrega </title>
 </head>
-<body>
-    <h1>Simulador de Ruleta</h1>
 
+<body>
+    <div id="titulo">
+        <h1>Simulador de Ruleta</h1>
+    </div>
+    <div id="contenido">
+        
+    </div>
+    <div id="buttons">
+        <button type="button" class="btn" id="play">Jugar</button>
+        <button type="button" class="btn" id="restart">Reiniciar</button>
+    </div>
     <script src="script.js"></script>
 </body>
+
 </html>
