interactuando con html

--- a/index.html
+++ b/index.html
@@ -5,22 +5,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo.css">
-    <title>Proyecto Final - 1er Pre Entrega </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/estilo.css">
+    <title>Simulador de ruleta / Bienvenida</title>
 </head>
 
 <body>
-    <div id="titulo">
+    <div id="titulo1">
         <h1>Simulador de Ruleta</h1>
     </div>
-    <div id="contenido">
-        
-    </div>
     <div id="buttons">
-        <button type="button" class="btn" id="play">Jugar</button>
-        <button type="button" class="btn" id="restart">Reiniciar</button>
+        <form id="formulario">
+            <div class="row">
+                <div class="col-5">
+                    <input type="text" class="form-control" id="nombre" placeholder="Nombre">
+                </div>
+                <div class="col-5">
+                    <input type="text" class="form-control" id="apellido" placeholder="Apellido">
+                </div>
+                <div class="col-2">
+                    <a class="btn btn-primary" href="./tablero.html" role="button" id="start" >Jugar</a>
+                </div>
+            </div>
+        </form>
     </div>
-    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+        integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
+        integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
+        crossorigin="anonymous"></script>
+    <script src="./js/script1.js"></script>
 </body>
 
 </html>
