--- a/tablero.html
+++ b/tablero.html
@@ -83,11 +83,10 @@
 
     <div id="buttons btnTablero">
         <button type="button" class="btn btn-primary btn-lg" id="girar">Girar</button>
-        <a class="btn btn-secondary btn-lg" href="./index.html" role="button">Reiniciar</a>
     </div>
 
 
-
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
         integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
         crossorigin="anonymous"></script>
